fix: update styling for EmptyData and DataView to fix alignment

--- a/src/components/Common/EmptyData/EmptyData.module.scss
+++ b/src/components/Common/EmptyData/EmptyData.module.scss
@@ -1,5 +1,5 @@
 .emptyData {
-  margin: toRem(40);
+  margin: toRem(40) 0;
   p {
     color: var(--g-colors-gray-900);
   }
